force-app/main/default/objects/QTB_Documents_Send_Lookup_Queue__c/QTB_Documents_Send_Lookup_Queue__c.object-meta.xml
<CustomObject>
    <label>Documents Send Lookup Queue</label>
    <nameField>
        <displayFormat>DOC-{000000}</displayFormat>
        <label>Documents Send Lookup Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents Send Lookup Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>