force-app/main/default/objects/QTB_Documents_Send_Lookup_Queue__c/fields/QTB_Invoice_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>QTB_Invoice_Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Scheduler</label>
    <referenceTo>blng__InvoiceScheduler__c</referenceTo>
    <relationshipLabel>Documents Send Lookup Queues</relationshipLabel>
    <relationshipName>Documents_Send_Lookup_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>