force-app/main/default/objects/QTB_Documents_Send_Lookup_Queue__c/fields/QTB_Status__c.field-meta.xml
<CustomField>
    <fullName>QTB_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
                <isActive>false</isActive>
                <label>Hold</label>
            </value>
            <value>
                <fullName>Sent to Bill Trust</fullName>
                <isActive>false</isActive>
                <label>Sent to Bill Trust</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>