force-app/main/default/objects/QTB_Documents_Send_Lookup_Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QTB_Invoice__c</columns>
    <columns>QTB_Credit_Note__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>QTB_Document_Country__c</columns>
    <columns>QTB_Status__c</columns>
    <columns>QTB_Document_Receiver__c</columns>
    <columns>QTB_Document_Source__c</columns>
    <columns>QTB_Invoice_Scheduler__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>